--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -51,3 +51,7 @@
  #img-responsiveIP{
   margin-left: 70px;
  }
+
+.hr{
+  color: $gray;
+}
